@@ -3,6 +3,8 @@
 - Reorganized project's structure
 - Relative imports changed to absolute imports
 - Updated core paths
+- Fixed recursion problem in errors logger
+- Fixed platform module name
 
 2.0.55 (2023-12-25)
 
